--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="public/images/jlt-favicon-v4.png">
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="public/css/reset.css">
   <link rel="stylesheet" href="public/css/index.css">
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   
   <title>Newsletter Signup</title>
 </head>
