--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
               <label for="email" class="body-small">Email address</label>
               <p id="email-error" class="error body-small hidden">Valid email required</p>
             </div>
-            <input class="email" type="text" name="email" id="email" placeholder="email@company.com">
+            <input class="email" type="text" name="email" id="email" placeholder="email@company.com" maxlength="254">
             <input id="email-submit" class="btn-primary" type="submit" value="Subscribe to monthly newsletter">
           </form>
         </div>
       </div>
     </main>
   </div>
-  <script src="public/js/index.js"></script>
+  <script src="public/js/index.js" type="module"></script>
 </body>
 </html>
