Fixed the history update, twas a chrome add-on, and started on the response content

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   </div>
   <!-- End testing -->
 
-  <div class="grid-wrapper">
-    <main class="outer-padding inner-padding">
+  <div id="component" class="grid-wrapper">
+    <main id="main" class="outer-padding inner-padding">
       <div id="hero-image-wrapper">
         <img id="mobile-hero-img" src="public/images/illustration-sign-up-mobile.svg" alt="Graphic image for header illustration">
         <img id="desktop-hero-img" src="public/images/illustration-sign-up-desktop.svg" alt="Graphic image for illustration in desktop view">
@@ -52,6 +52,6 @@
       </div>
     </main>
   </div>
-  <script src="public/js/index.js" type="module"></script>
+  <script src="public/js/index.js"></script>
 </body>
 </html>
