Final updates and notes prior to submission

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </ul>
         </div>
         <div id="email-wrapper" class="margin-block">
-          <form id="email-capture" action="/" method="post">
+          <form id="email-capture" action="/" method="post" autocomplete="off">
             <div class="label-wrapper">
               <label for="email" class="body-small">Email address</label>
               <p id="email-error" class="error body-small hidden">Valid email required</p>
